Implementing the functionality to preview the camera trajectories.

--- a/demo/static/css/style.css
+++ b/demo/static/css/style.css
@@ -116,3 +116,9 @@ div#flow-buttons button {
 .trajectory.section .button {
     margin-bottom: 10px;
 }
+
+.modal video {
+    max-height: 100%;
+    max-width: 100%;
+    width: 100%;
+}
