Implementing the functionality to render videos.

--- a/demo/static/css/style.css
+++ b/demo/static/css/style.css
@@ -71,7 +71,8 @@ div#flow-buttons button {
 }
 
 .layout.section label,
-.trajectory.section label {
+.trajectory.section label,
+.render.section label {
     font-weight: bold;
 }
 
@@ -115,6 +116,24 @@ div#flow-buttons button {
 
 .trajectory.section .button {
     margin-bottom: 10px;
+}
+
+.render.section .image-viewer {
+    border: 1px dotted #ccc;
+    margin-bottom: 10px;
+    padding-top: 56.25%;
+    position: relative;
+    width: 100%;
+}
+
+.render.section .image-viewer img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .modal video {
